@@ -1,3 +1,10 @@
+Fri Sep 10 21:42:23 BST 1999  Alex Roberts  <bse@gedit.pn.org>
+
+	* src/gE_prefs.c: (gE_save_settings) Actually Save the tab position!
+	  (gE_get_settings) Load the tab position value straight into the MDI variable.
+	  
+	* src/commands.c: (file_quit_cb) Save the settings when we quit.
+
 Fri Sep 10 21:30:03 BST 1999  Alex Roberts  <bse@gedit.pn.org>
 
 	* src/commands.c: (tab_pos) New function. Changes the tab position over all 
